# vksplat

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.bib  README.md  bench_results.py  compile_shaders.py
.cursor/rules/: agent-response-style.mdc  cpp-coding-style.mdc  cpp-vulkan-mobile.mdc  directory-guardrails.mdc  git-commits.mdc  golden-master-testing.mdc  project-architecture.mdc  rewrite-buffer-contract.mdc  rewrite-error-handling.mdc  rewrite-porting-order.mdc  rewrite-testing.mdc  rule-maintenance.mdc  shader-build-embed.mdc
docs/: ohos-maleoon910-porting-report.md  shader-pipeline.md
next/: .gitignore
next/nlrc_vksplat/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example
next/nlrc_vksplat/cmake/: NlrcVksplatCompileCommands.cmake  NlrcVksplatCompileOptions.cmake  NlrcVksplatFetchDependency.cmake  NlrcVksplatLint.cmake  NlrcVksplatShaders.cmake  NlrcVksplatSyncCompileCommands.cmake  NlrcVksplatTests.cmake  NlrcVksplatWarnings.cmake
next/nlrc_vksplat/docs/: testing-report.md
next/nlrc_vksplat/scripts/: build-windows.ps1  compile_shaders.py  export_shader_binding_contracts.py  generate_shader_config.py  lint_cpp.py  vkbd_to_bins.py
next/nlrc_vksplat/shader/radix_sort/: config.glsl  downsweep.comp  spine.comp  upsweep.comp
next/nlrc_vksplat/slang/: alphablend_shader.slang  config.slang  cumsum.slang  push_constants.slang  smoke.slang  spherical_harmonics.slang  sum.slang  tile_shader.slang  utils.slang  vertex_shader.slang  where.slang
next/nlrc_vksplat/src/: nlrc_vksplat_config.hpp  span.hpp  version.cpp  version.hpp  vulkan_check.hpp
next/nlrc_vksplat/src/gpu/: compute_pipeline.cpp  compute_pipeline.hpp  constants.hpp  headless_context.cpp  headless_context.hpp  shader_binding_resolver.hpp  shader_descriptors.hpp  shader_execution.cpp  shader_execution.hpp  storage_buffer.cpp  storage_buffer.hpp
next/nlrc_vksplat/tests/: .clang-tidy  CMakeLists.txt  export_shader_binding_registry.cpp  test_compute_tile_ranges.cpp  test_fixture_catalog.cpp  test_fixture_loader.cpp  test_forward.cpp  test_generate_keys.cpp  test_golden_compare.cpp  test_gpu_smoke.cpp  test_main.cpp  test_manifest_profile.cpp  test_projection_forward.cpp  test_radix_sort.cpp  test_rasterize_forward.cpp  test_shader_config_profile.cpp  test_shader_descriptors.cpp  test_utility_shaders.cpp
next/nlrc_vksplat/tests/support/: fixture_loader.cpp  fixture_loader.hpp  fixture_manifest.cpp  fixture_manifest.hpp  fixtures.cpp  fixtures.hpp  golden_compare.cpp  golden_compare.hpp  gpu_available.cpp  gpu_available.hpp  manifest_profile.cpp  manifest_profile.hpp  shader_fixture_mapping.cpp  shader_fixture_mapping.hpp
ref/: .gitignore  README.md  compile_shaders.py
ref/docs/: ohos-maleoon910-porting-report.md  shader-pipeline.md
ref/vksplat/: .clang-format  CMakePresets.json  pyproject.toml  setup.py  simple_trainer.py
ref/vksplat/apps/: CMakeLists.txt
ref/vksplat/apps/trainer/: CMakeLists.txt  main.cpp
ref/vksplat/cmake/: FetchCLI11.cmake  FetchGLM.cmake  FetchNlohmannJson.cmake  VkSplatCompileCommands.cmake  VkSplatCompileOptions.cmake  VkSplatSyncCompileCommands.cmake
ref/vksplat/scripts/: vkbd_tool.py
ref/vksplat/slang/: alphablend_shader.slang  alphablend_shader_bwd_per_pixel.slang  alphablend_shader_bwd_per_splat.slang  alphablend_shader_bwd_tensor.slang  cumsum.slang  fused_projection_backward_optimizer.slang  mcmc.slang  morton_sort.slang  spherical_harmonics.slang  ssim.slang  strategy_utils.slang  sum.slang  utils.slang  vertex_shader.slang
ref/vksplat/src/: buffer.cpp  buffer.h  colmap_reader.cpp  colmap_reader.h  config.h  gs_pipeline.cpp  gs_pipeline.h  knn.cpp  knn.h  perf_timer.cpp  perf_timer.h  scheduler.cpp  scheduler.h  training_session.h
ref/vksplat/viewer/: http_server.py  render_worker.py  server.py  viewer.html
test_data/: README.md  generate_fixtures.py  shader_binding_contracts.json
test_data/fixtures/D_cumsum_multi_block/: manifest.json
test_data/fixtures/D_cumsum_multi_block_two_level/: manifest.json
test_data/fixtures/D_cumsum_single_pass/: manifest.json
test_data/fixtures/D_cumsum_single_pass_exact_block/: manifest.json
test_data/fixtures/D_cumsum_single_pass_near_block/: manifest.json
test_data/fixtures/D_sum/: manifest.json
test_data/fixtures/D_sum_multi_block/: manifest.json
test_data/fixtures/D_where/: manifest.json
test_data/fixtures/D_where_block_boundary/: manifest.json
test_data/fixtures/D_where_first_last/: manifest.json
test_data/fixtures/D_where_no_true/: manifest.json
test_data/fixtures/cumsum_multi_block/: manifest.json
test_data/fixtures/cumsum_single_pass/: manifest.json
test_data/fixtures/cumsum_single_pass_near_block/: manifest.json
test_data/fixtures/harness_smoke/: manifest.json
test_data/fixtures/radix_sort_duplicates/: manifest.json
test_data/fixtures/radix_sort_minimum_one/: manifest.json
test_data/fixtures/radix_sort_multi_partition/: manifest.json
test_data/fixtures/radix_sort_partition_boundary/: manifest.json
test_data/fixtures/radix_sort_reverse/: manifest.json
test_data/fixtures/radix_sort_single_partition/: manifest.json
test_data/fixtures/radix_sort_sorted/: manifest.json
test_data/fixtures/sum/: manifest.json
test_data/fixtures/sum_multi_block/: manifest.json
test_data/fixtures/where/: manifest.json
tools/: pre_commit_nlrc_vksplat_lint.py  pre_commit_repo_hygiene.py
vksplat/: .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  setup.py
vksplat/apps/: CMakeLists.txt
vksplat/apps/trainer/: main.cpp
vksplat/cmake/: FetchDependency.cmake  FetchGLM.cmake  FetchVulkanHeaders.cmake  VkSplatWarnings.cmake
vksplat/scripts/: generate_shader_config.py
vksplat/shader/radix_sort/: config.glsl  downsweep.comp
vksplat/slang/: config.slang  default.slang  tile_shader.slang  where.slang
vksplat/src/: buffer.cpp  buffer.h  config.h  gs_renderer.cpp  gs_renderer.h  gs_trainer.cpp  gs_trainer.h  python_bindings.cpp  training_session.cpp  training_session.h  vksplat_config.h
(+88 files in other folders)
